--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
         <a href="#" class="login">ログイン</a>
       </div>
     </div>
-    </hader>
+    </header>
   <div class="top-wrapper">
     <div class="container">
       <h1>LEARN TO CODE.<br>LEARN TO BE CREATIVE.</h1>
